Changed to "Ticket Sale" in Dashboard - Overview tab

--- a/app/templates/events/view/index.hbs
+++ b/app/templates/events/view/index.hbs
@@ -48,7 +48,7 @@
 
           <a id="event_tickets_link" class="ember-view event-segment-link item" href="#"
             onclick="showSegment('event_tickets')">
-            Tickets
+            Ticket Sale
           </a>
 
           {{#if this.model.event.isSessionsSpeakersEnabled}}
