--- a/app/templates/components/events/view/overview/event-tickets.hbs
+++ b/app/templates/components/events/view/overview/event-tickets.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="header">{{t 'Tickets'}}</div>
+  <div class="header">{{t 'Ticket Sale'}}</div>
 </div>
 <div class="content">
   <h4 class="ui header">{{t 'Summary'}}</h4>
