modified basic details, additional info, attendee forms

--- a/app/templates/components/forms/login-form.hbs
+++ b/app/templates/components/forms/login-form.hbs
@@ -1,4 +1,4 @@
-<div class="ui stackable {{unless this.noSocial 'two' 'one'}} column doubling centered grid mt-4">
+<div class="ui stackable {{unless this.noSocial 'three' 'one'}} column doubling centered grid mt-4">
   <div class="flash-messages ui container">
     {{#each flashMessages.queue as |flash|}}
         <div class="ui {{flash.type}} message">
