--- a/app/templates/components/forms/reset-password-form.hbs
+++ b/app/templates/components/forms/reset-password-form.hbs
@@ -1,4 +1,4 @@
-<div class="ui stackable two column doubling centered grid mt-4">
+<div class="ui stackable three column doubling centered grid mt-4">
   <div class="column">
     <form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}} style="cursor: default;">
       <div class="ui aligned segment basic no margin no padding">
