--- a/app/styles/pages/my.scss
+++ b/app/styles/pages/my.scss
@@ -1,9 +1,10 @@
 .my-card {
   background-color: #fff;
-  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 1/5);
+  // box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 1/5);
+  box-shadow: 0 1px 2px 0 rgb(0, 0, 0, 1/5);
   padding: 20px;
   border-radius: 5px;
-  margin: 20px;
+  margin: 20px 0px 0px 0px;
 }
 
 .topic-card {
