--- a/app/templates/components/forms/register-form.hbs
+++ b/app/templates/components/forms/register-form.hbs
@@ -1,4 +1,4 @@
-<div class="ui stackable {{unless this.noSocial 'two' 'one'}} column doubling centered grid mt-4">
+<div class="ui stackable {{unless this.noSocial 'three' 'one'}} column doubling centered grid mt-4">
   <div class="column">
     <form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}} novalidate style="cursor: default;">
       <div class="ui aligned segment basic no margin no padding">
